[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rkhumans"
version = "0.0.2"
authors = [
  { name="Roger Kohler", email="roger.kohlerjr@gmail.com" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "build>=0.5.1",
    "hatch>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/rogerkohlerjr/rkhumans"
Issues = "https://github.com/rogerkohlerjr/rkhumans"
