[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rkhumans"
version = "0.0.5"
authors = [
  { name="Roger Kohler", email="roger.kohlerjr@gmail.com" },
]
description = "A collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "hatch>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/rogerkohlerjr/rkhumans"
Issues = "https://github.com/rogerkohlerjr/rkhumans/issues"
